<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/login_screen_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/verify"
        android:textColor="@color/primary_blue"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_image" />

    <TextView
        android:id="@+id/login_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/instruction_phone"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title" />

    <EditText
        android:id="@+id/login_code_text"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/text_input_bg"
        android:ems="10"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/code"
        android:inputType="number"
        android:padding="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textColorHint="#969696"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_desc" />

    <EditText
        android:id="@+id/login_number_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_input_bg"
        android:ems="10"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/enter_number"
        android:inputType="phone"
        android:padding="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textColorHint="#969696"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_code_text"
        app:layout_constraintTop_toBottomOf="@+id/login_desc" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/white"
        android:background="@drawable/primary_btn_bg"
        android:fontFamily="@font/open_sans_bold"
        android:padding="12dp"
        android:text="@string/generate_otp"
        android:textAllCaps="false"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_number_text" />

    <TextView
        android:id="@+id/author_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/author"
        android:textColor="#9BA4DA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/login_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintTop_toTopOf="@+id/login_btn"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/login_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/login_feedback"
        android:textColor="#FF0202"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/author_text"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>