<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpActivity">

    <ImageView
        android:id="@+id/otp_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/otp_screen_image" />

    <TextView
        android:id="@+id/otp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/enter_otp"
        android:textColor="@color/primary_blue"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp_image" />

    <TextView
        android:id="@+id/otp_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="We have sent you an OTP \nfor phone number verification"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp_title" />

    <EditText
        android:id="@+id/otp_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_input_bg"
        android:ems="10"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/enter_otp"
        android:inputType="phone"
        android:padding="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textColorHint="#969696"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp_desc" />

    <Button
        android:id="@+id/otp_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/primary_blue"
        android:fontFamily="@font/open_sans_bold"
        android:padding="12dp"
        android:text="@string/verify_otp"
        android:textAllCaps="false"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/otp_text_view" />

    <TextView
        android:id="@+id/author_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/author"
        android:textColor="#9BA4DA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/otp_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/login_feedback"
        android:textColor="#FF0202"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/author_text"
        app:layout_constraintEnd_toEndOf="@+id/otp_btn"
        app:layout_constraintStart_toStartOf="@+id/otp_btn"
        app:layout_constraintTop_toBottomOf="@+id/otp_btn" />

    <ProgressBar
        android:id="@+id/otp_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/otp_btn"
        app:layout_constraintEnd_toEndOf="@+id/otp_btn"
        app:layout_constraintTop_toTopOf="@+id/otp_btn"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>